# UFO

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml  requirements.txt
configs/: models.yaml  run.yaml
docs/: UFM_OFFICIAL_INFERENCE.md  index.html
docs/static/css/: index.css
examples/: run_all.sh
scripts/: make_tables.py  run_cue_eval.py  run_eval.py  run_inference.py  run_scoring.py
tests/: test_offline.py
ufo_bench/: __init__.py  aggregate.py  cli.py  config.py  cue_eval.py  data.py  imutil.py  inference.py  prompts.py  registry.py  runner.py  scoring.py
ufo_bench/providers/: __init__.py  base.py  fal.py  gemini.py  openai_compatible.py
ufo_bench/providers/local/: __init__.py  _template.py  bagel.py  base_local.py  emu3.py  janus_pro.py  omni_r1.py  omnigen2.py  ovis_u1.py  unicot.py  unipic1.py  unipic2.py  uniworld_v1.py
